# dfeng

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
config/: group-setup.example.yaml  member-workbook-template.xlsx  pinned-message-ids.example.yaml  sheets-schema.md  spam-rules.example.yaml  spam-rules.yaml
content/: pinned-messages.md  seed-content-calendar.md
deploy/systemd/: dfeng-bot.service
docs/: admin-onboarding.md  apply-branding-runbook.md  branding-assets.md  deployment.md  entry-links.md  google-sheets-setup.md  launch-seeding-plan.md  launch-smoke-test.md  metrics-and-reporting.md  moderation-runbook.md  pdpa-policy.md  production-deployment.md  qa-checklist.md  storage-scaling-plan.md  telegram-setup.md  tone-guide.md
scripts/: generate_qr.py  make_member_workbook_template.py
src/dfeng_bot/: __init__.py  app.py  config.py  logging_setup.py  main.py  metrics.py  policy.py
src/dfeng_bot/handlers/: __init__.py  antispam.py  base.py  commands.py  dm_onboarding.py  flood_control.py  join_request.py  link_restrictions.py  messages.py  (+6 more)
tests/: _config.py  _fakes.py  test_admin_moderation.py  test_antispam.py  test_button_lock.py  test_dm_onboarding.py  test_dm_pii_capture.py  test_entry_source.py  test_flood_control.py  test_link_restrictions.py  test_log_event_action_field.py  test_onboarding_record.py  test_pdpa_and_pii.py  test_pii_autodelete.py  test_require_qualification.py  test_support_redirect.py  test_write_queue.py
(+5 files in other folders)
